# VeOmni

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: gpu_unit_tests.yml
configs/multimodal/qwen2_vl/: lumine_stage1_pretrain.yaml  lumine_stage2_instruct.yaml  lumine_stage3_reasoning.yaml
docs/: index.md
docs/examples/: qwen3_moe.md
docs/transformers_v5/: index.md  patchgen.md  veomni_flash_attention_kernel_adapter.md
docs/usage/: support_new_models.md
scripts/: merge_dcp_to_hf.py
tasks/data/: vlm_data_process.py
tasks/omni/: train_qwen25_omni.py  train_qwen3_omni.py  train_qwen_vl.py
tests/data/: test_dynamic_batching_dataset.py  test_simple_multisource_dataset.py  utils.py
tests/models/: utils.py
tests/models/omni/: test_qwen3_omni_moe.py
tests/toy_config/qwen3_omni_moe_toy/: config.json
veomni/arguments/: arguments_types.py
veomni/data/: __init__.py  batching_strategy.py  data_loader.py  dynamic_batching.py  simple_multisource_dataset.py
veomni/data/multimodal/: preprocess.py
veomni/models/: auto.py  module_utils.py
veomni/models/transformers/deepseek_v3/: modeling_deepseek_v3.py
veomni/models/transformers/qwen3/: __init__.py  qwen3_gpu_patch_gen_config.py
veomni/models/transformers/qwen3_moe/: modeling_qwen3_moe.py
veomni/models/transformers/qwen3_omni_moe/: __init__.py  modeling_qwen3_omni_moe.py  parallel_plan.py
veomni/models/transformers/qwen3_vl_moe/: modeling_qwen3_vl_moe.py
veomni/ops/flash_attn/: __init__.py
veomni/ops/fused_moe/: __init__.py  group_gemm.py  npu_group_gemm.py  torch_fused_moe.py
veomni/ops/group_gemm/torch_moe_utils/: kernels.py  utils.py
veomni/patchgen/: __init__.py  codegen.py  patch_spec.py  run_codegen.py
veomni/utils/: device.py  save_safetensor_utils.py
